--- a/src/app/components/header-component/header-component.html
+++ b/src/app/components/header-component/header-component.html
@@ -20,7 +20,7 @@
       <div class="collapse navbar-collapse" id="navbarContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item mx-4">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="#">HOME</a>
           </li>
           <li class="nav-item mx-4">
             <a class="nav-link" href="#">ABOUT</a>
