--- a/src/app/app.html
+++ b/src/app/app.html
@@ -4,3 +4,7 @@
 <app-article-burgers-component></app-article-burgers-component>
 <app-article-offer-component></app-article-offer-component>
 <app-slider-menu-component></app-slider-menu-component>
+<app-slider-reviews-component></app-slider-reviews-component>
+<app-video-promo-component></app-video-promo-component>
+<app-contact-us-formulaire-component></app-contact-us-formulaire-component>
+<app-footer-component></app-footer-component>
