--- a/src/app/components/article-enjoy-component/article-enjoy-component.html
+++ b/src/app/components/article-enjoy-component/article-enjoy-component.html
@@ -1,4 +1,4 @@
-<div class="background">
+<div class="background" id="enjoy">
   <div class="container px-5">
     <div class="row align-items-center gx-5">
       <div class="col-6 ps-0">
