--- a/src/app/components/article-burgers-component/article-burgers-component.html
+++ b/src/app/components/article-burgers-component/article-burgers-component.html
@@ -1,4 +1,4 @@
-<div class="bg my-5 py-5" [style.background-image]="'url(' + dataArticle().image_src + ')'" >
+<div class="bg my-5 py-5 mx-auto" [style.background-image]="'url(' + dataArticle().image_src + ')'" id="about-us">
     <div class="container">
         <div class="row">
             <div class="col-5 offset-7">
