--- a/src/app/components/article-offer-component/article-offer-component.html
+++ b/src/app/components/article-offer-component/article-offer-component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" id="hot-deal">
     <div class="row">
         <div class="col-12 col-md-6">
             <div class="w-75">
