--- a/src/app/components/header-component/header-component.html
+++ b/src/app/components/header-component/header-component.html
@@ -1,4 +1,4 @@
-<header class="header py-3">
+<header class="header py-3" id="header">
   <nav class="navbar navbar-expand-lg">
     <div class="container px-5">
       <a class="navbar-brand" href="#">
@@ -20,19 +20,19 @@
       <div class="collapse navbar-collapse" id="navbarContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item mx-4">
-            <a class="nav-link active" aria-current="page" href="#">HOME</a>
+            <a class="nav-link active" href="#header">HOME</a>
           </li>
           <li class="nav-item mx-4">
-            <a class="nav-link" href="#">ABOUT</a>
+            <a class="nav-link" href="#about-us">ABOUT</a>
           </li>
           <li class="nav-item mx-4">
-            <a class="nav-link" aria-current="page" href="#">OUR MENU</a>
+            <a class="nav-link" href="#menu">OUR MENU</a>
           </li>
           <li class="nav-item mx-4">
-            <a class="nav-link disabled" aria-disabled="true">HOT DEALS</a>
+            <a class="nav-link" href="#hot-deal">HOT DEALS</a>
           </li>
           <li class="nav-item mx-4">
-            <a class="nav-link disabled" aria-disabled="true">CONTACT US</a>
+            <a class="nav-link" href="#contact-us">CONTACT US</a>
           </li>
           <li class="nav-item mx-4">
             <a href="#" class="btn btnOrderNow jaune">ORDER NOW</a>
