--- a/src/app/components/footer-component/footer-component.scss
+++ b/src/app/components/footer-component/footer-component.scss
@@ -23,7 +23,7 @@ footer {
     text-decoration: none;
     display: flex;
     align-items: center;
-    transition: 0.2s;
+    transition: 200ms;
 
     &::before {
       content: "\27A4"; 
