--- a/src/app/components/contact-us-formulaire-component/contact-us-formulaire-component.html
+++ b/src/app/components/contact-us-formulaire-component/contact-us-formulaire-component.html
@@ -1,4 +1,4 @@
-<div class="container my-5 py-5" id="contact-us">
+<div class="container my-5 py-5 text-center text-md-start" id="contact-us">
   <div class="text-center mb-5">
     <h2>{{ dataArticle().titre }}</h2>
     <hr>
@@ -50,7 +50,7 @@
       </form>
     </div>
 
-    <div class="col-md-4 offset-2">
+    <div class="col-md-4 offset-md-2">
       <h4 class="mb-3">{{ dataArticle().sous_titre }}</h4>
       <div class="text-white" [innerHTML]="dataArticle().contenu"></div>
     </div>
