--- a/src/app/components/footer-component/footer-component.scss
+++ b/src/app/components/footer-component/footer-component.scss
@@ -23,6 +23,7 @@ footer {
     text-decoration: none;
     display: flex;
     align-items: center;
+    justify-content: center;
     transition: 200ms;
 
     &::before {
