--- a/src/app/components/video-promo-component/video-promo-component.scss
+++ b/src/app/components/video-promo-component/video-promo-component.scss
@@ -1,10 +1,30 @@
+@use '../../../variables';
+
 .video-container {
   .image {
     height: 100vh;
-    max-width: 100vw;
+    max-width: 100%;
   }
 }
 
 .play-button {
   cursor: pointer;
+  svg {
+    transition: 200ms;
+    &:hover {
+        animation: pulse 1.2s infinite ease-in-out;
+    }
+  }
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1.0);
+  }
+  50% {
+    transform: scale(1.5);
+  }
+  100% {
+    transform: scale(1.0);
+  }
 }
